# ChangeLog for app-emacs/gnus-cvs
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/gnus-cvs/Attic/ChangeLog,v 1.15 2007/04/10 19:59:02 opfer Exp $

  10 Apr 2007; Christian Faulhammer <opfer@gentoo.org> gnus-cvs-5.11.ebuild:
  added FDL license, restructured, added a die comment and added some quotes,
  removed virtual/emacs from DEPEND

  07 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/70gnus-cvs-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  21 Aug 2006; Matthew Kennedy <mkennedy@gentoo.org> gnus-cvs-5.11.ebuild:
  Don't depend on app-emacs/w3; Resolves Bug #144616.

  27 Feb 2006; Matthew Kennedy <mkennedy@gentoo.org> gnus-cvs-5.11.ebuild:
  Remove SANDBOX_DISABLED=1 since it is not a problem with Emacs Lisp
  extensions; Partially resolves Bug #76141.

  03 May 2005; Mamoru KOMACHI <usata@gentoo.org> gnus-cvs-5.11.ebuild:
  Force -j1; bug #75325.

  09 Jan 2005; Sven Wegener <swegener@gentoo.org> gnus-cvs-5.11.ebuild:
  Added missing parentheses in SRC_URI/*DEPEND/LICENSE.

  05 Sep 2004; Daniel Ahlberg <aliz@gentoo.org> gnus-cvs-5.11.ebuild:
  Added amd64 keyword, closing #58609.

  27 Jun 2004; Aron Griffis <agriffis@gentoo.org> gnus-cvs-5.11.ebuild:
  QA - fix use invocation

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> gnus-cvs-5.11.ebuild:
  Add die following econf for bug 48950

*gnus-cvs-5.11 (05 Jan 2004)

  05 Jan 2004; Jeremy Maitin-Shepard <jbms@gentoo.org> gnus-cvs-5.10.4.ebuild,
  gnus-cvs-5.11.ebuild:
  Version bump.

  30 Dec 2003; Jeremy Maitin-Shepard <jbms@gentoo.org> gnus-cvs-5.10.4.ebuild:
  Version bump.

  30 Dec 2003; Jeremy Maitin-Shepard <jbms@gentoo.org> gnus-cvs-5.10.3.ebuild:
  Minor changes.

*gnus-cvs-5.10.3 (05 Dec 2003)

  05 Dec 2003; Jeremy Maitin-Shepard <jbms@gentoo.org> gnus-cvs-5.10.3.ebuild,
  metadata.xml, files/70gnus-cvs-gentoo.el:
  Initial import.