@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/gnus-cvs/Attic/gnus-cvs-5.11.ebuild,v 1.11 2007/04/10 19:59:02 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/gnus-cvs/Attic/gnus-cvs-5.11.ebuild,v 1.12 2007/04/15 19:44:27 ulm Exp $
 
 ECVS_SERVER="cvs.gnus.org:/usr/local/cvsroot"
 ECVS_MODULE="gnus"
@@ -10,20 +10,20 @@ ECVS_CVS_OPTIONS="-dP"
 
 inherit elisp cvs
 
-IUSE=""
-
-S=${WORKDIR}/${ECVS_MODULE}
 DESCRIPTION="Current alpha branch of the Gnus news- and mail-reader"
 HOMEPAGE="http://www.gnus.org/"
 SRC_URI=""
+
 LICENSE="GPL-2 FDL-1.2"
 SLOT="0"
 KEYWORDS="~x86 ~ppc ~alpha ~sparc ~amd64"
-
+IUSE=""
 RESTRICT="$RESTRICT nostrip"
-SITEFILE=70gnus-gentoo.el
 
 DEPEND=""
+
+S=${WORKDIR}/${ECVS_MODULE}
+SITEFILE=70${PN}-gentoo.el
 
 src_compile() {
 	local myconf
@@ -38,12 +38,12 @@ src_compile() {
 }
 
 src_install() {
-	emake \
+	einstall \
 		lispdir="${D}/usr/share/emacs/site-lisp/gnus-cvs" \
-		etcdir="${D}/usr/share/emacs/etc" install \
-		|| die "emake install failed"
+		etcdir="${D}/usr/share/emacs/etc" \
+		|| die "einstall failed"
 
-	elisp-site-file-install "${FILESDIR}/${SITEFILE}A"
+	elisp-site-file-install "${FILESDIR}/${SITEFILE}"
 
 	dodoc ChangeLog GNUS-NEWS README todo
 
