@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/gnus-cvs
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/gnus-cvs/Attic/ChangeLog,v 1.15 2007/04/10 19:59:02 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/gnus-cvs/Attic/ChangeLog,v 1.16 2007/04/15 19:44:27 ulm Exp $
+
+  15 Apr 2007; Ulrich Mueller <ulm@gentoo.org> gnus-cvs-5.11.ebuild:
+  Changed emake to einstall, corrected name of sitefile. Fixes bug #174237.
 
   10 Apr 2007; Christian Faulhammer <opfer@gentoo.org> gnus-cvs-5.11.ebuild:
   added FDL license, restructured, added a die comment and added some quotes,
